--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.4.0",
+    "path": "^0.12.7"
   }
 }
